--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -130,43 +130,18 @@
     <div class="row">
         <div class="col-md-10 col-md-offset-1" style="padding-bottom: 10px">
             {{#appointment_set.length}}
-            <h3 class="topcoat-list__header">You have {{appointment_set.length}} total appointments.</h3>
+            <h3 class="topcoat-list__header">You have {{appointment_set.length}} total appointments. </h3>
             {{/appointment_set.length}}
 
-                <table class="table table-condensed">
+                <table class="table table-condensed" id="upcomingtable">
                 <tr>
                     <th>Appointment</th>
                     <th>Status</th>
                 </tr>
 
-                {{#appointment_set}}
-                    <tr>
+                 <script> displayYourAppts(); </script>
 
-                        {{^actual_end}}
-                            <td>
-                               <a href="#appt/{{id}}">{{location.name}}</a>
-                            </td>
-                            <td>
-                                Not Started
-                            </td>
-                        {{/actual_end}}
-
-                        {{#actual_end}}
-                            <td>
-                                <a href="#apptstats/{{id}}">{{location.name}}</a>
-                            </td>
-                            <td>
-                               <font color="#009933"> <strong > Completed </strong> </font>
-                            </td>
-                        {{/actual_end}}
-
-
-                    </tr>
-                {{/appointment_set}}
-                {{^appointment_set}}
-                <tr> No scheduled sessions </tr>
-            {{/appointment_set}}
-            </table>
+                </table>
         </div>
     </div>
 </script>
@@ -294,12 +269,12 @@
     <div class="col-xs-4 text-center" style="padding:5px 0;">
       <!--<span>{{location.name}}</span>
       <br>-->
-      <span id="riders_outer">Counted Riders: <span id="total_riders">0</span></span>
+      <span id="riders_outer" class="headings">Counted Riders: <span id="total_riders">0</span></span>
       <br>
       <div id="timer">&nbsp;</div>
 
-      <input id="btn_pause" type="button" class="btn btn-primary btn-event" value="Pause" onclick="pause()">
-      <input style="" id="btn_end" type="button" class="btn btn-primary btn-event" value="End" onclick="endSession()">
+      <input id="btn_pause" type="button" class="btn btn-info btn-event" value="Pause" onclick="pause()">
+      <input style="" id="btn_end" type="button" class="btn btn-info btn-event" value="End" onclick="endSession()">
 
       <div id="checkbox_div">
       <hr>
