--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -5,7 +5,8 @@
     <!--<meta content="width=device-width, initial-scale=1.0, minimum-scale=1.0, maximum-scale=1.0" name="viewport" />-->
 
     <meta name="apple-mobile-web-app-capable" content="yes">
-    <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+    <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1, maximum-scale=1">
+    <!-- temp takig out the unscrollable code: , user-scalable=no -->
     <meta name="mobile-web-app-capable" content="yes">
     <!--<link href="assets/topcoat/css/topcoat-mobile-light.css" rel="stylesheet">-->
     <link href="assets/bootstrap/bootstrap.css" rel="stylesheet">
