trying-to-fix-the-order-by-flipping
on both the web app and the mobile app's list of appointments, whenever
I promote to QA, my appointment lists always "flip in the order" in
which the appts are shown to users. so I tried to institute a specific
'order by' function

--- a/mobileapp/bikeapp/www/index.html
+++ b/mobileapp/bikeapp/www/index.html
@@ -425,7 +425,7 @@
           <br>
           <a href="javascript:change_api_url('https://www.bikecounts.com/api/')"> https://www.bikecounts.com/api/</a>
           <br>
-          <a href="javascript:change_api_url('http://127.0.0.1:8001/api/')"> http://127.0.0.1:8001/api/</a>
+          <a href="javascript:change_api_url('https://127.0.0.1:8001/api/')"> http://127.0.0.1:8001/api/</a>
       </div>
     </div>
   </div>
